OneBitSports versão mobile parte 2 e versão desktop

--- a/index.html
+++ b/index.html
@@ -25,54 +25,56 @@
 	</header>
 	<main class="conteudo-principal">
 		<a name="topo"></a>
-		<h1 class="conteudo-principal__titulo">Bem vindo a OneBitSports!</h1>
-		<p class="conteudo-principal__descricao">Aqui é onde você encontra todos os itens mais novos e modernos do seu esporte preferido.</p>
+		<section class="conteudo-principal__titulo">
+			<h1>Bem vindo a OneBitSports!</h1>
+			<p>Aqui é onde você encontra todos os itens mais novos e modernos do seu esporte preferido.</p>
+		</section>
 		<section class="secao-esportes">
-			<div class="esporte">
+			<article class="esporte esporte-boxe">
 				<img src="img/boxe.jpg" alt="Boxeador em plano de fundo escuro" class="esporte-imagem">
 				<h3 class="esporte-titulo">BOXE</h3>
 				<p class="esporte-descricao">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet blanditiis ipsa excepturi voluptatibus earum impedit optio saepe cum est, ea eos quibusdam mollitia ab tempora qui dolorem eaque quam id!</p>
-			</div>
-			<div class="esporte">
+			</article>
+			<article class="esporte esporte-crossfit">
 				<img src="img/crossfit.jpg" alt="Crossfiteiro movendo um pneu de trator" class="esporte-imagem">
 				<h3 class="esporte-titulo">CROSSFIT</h3>
 				<p class="esporte-descricao">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet blanditiis ipsa excepturi voluptatibus earum impedit optio saepe cum est, ea eos quibusdam mollitia ab tempora qui dolorem eaque quam id!</p>
-			</div>
-			<div class="esporte">
+			</article>
+			<article class="esporte esporte-natacao">
 				<img src="img/natacao.jpg" alt="Nadador submerso em uma piscina olímpica" class="esporte-imagem">
 				<h3 class="esporte-titulo">NATAÇÃO</h3>
 				<p class="esporte-descricao">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet blanditiis ipsa excepturi voluptatibus earum impedit optio saepe cum est, ea eos quibusdam mollitia ab tempora qui dolorem eaque quam id!</p>
-			</div>
-			<div class="esporte">
+			</article>
+			<article class="esporte esporte-parkour">
 				<img src="img/roupas.jpg" alt="Praticante de Parkour em manobra" class="esporte-imagem">
 				<h3 class="esporte-titulo">PARKOUR</h3>
 				<p class="esporte-descricao">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet blanditiis ipsa excepturi voluptatibus earum impedit optio saepe cum est, ea eos quibusdam mollitia ab tempora qui dolorem eaque quam id!</p>
-			</div>
-			<div class="esporte">
+			</article>
+			<article class="esporte esporte-basquete">
 				<img src="img/basquete.jpg" alt="Jogador de Basquete mirando na cesta" class="esporte-imagem">
 				<h3 class="esporte-titulo">BASQUETE</h3>
 				<p class="esporte-descricao">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet blanditiis ipsa excepturi voluptatibus earum impedit optio saepe cum est, ea eos quibusdam mollitia ab tempora qui dolorem eaque quam id!</p>
-			</div>
-			<div class="esporte">
+			</article>
+			<article class="esporte esporte-corrida">
 				<img src="img/corrida.jpg" alt="Homem correndo na estrada" class="esporte-imagem">
 				<h3 class="esporte-titulo">CORRIDA</h3>
 				<p class="esporte-descricao">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet blanditiis ipsa excepturi voluptatibus earum impedit optio saepe cum est, ea eos quibusdam mollitia ab tempora qui dolorem eaque quam id!</p>
-			</div>
-			<div class="esporte">
+			</article>
+			<article class="esporte esporte-surf">
 				<img src="img/surf.jpg" alt="Homem surfando uma onda amena" class="esporte-imagem">
 				<h3 class="esporte-titulo">SURF</h3>
 				<p class="esporte-descricao">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet blanditiis ipsa excepturi voluptatibus earum impedit optio saepe cum est, ea eos quibusdam mollitia ab tempora qui dolorem eaque quam id!</p>
-			</div>
-			<div class="esporte">
+			</article>
+			<article class="esporte esporte-trilha">
 				<img src="img/trilha.jpg" alt="Homem caminhando na floresta" class="esporte-imagem">
 				<h3 class="esporte-titulo">TRILHA</h3>
 				<p class="esporte-descricao">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet blanditiis ipsa excepturi voluptatibus earum impedit optio saepe cum est, ea eos quibusdam mollitia ab tempora qui dolorem eaque quam id!</p>
-			</div>
-			<div class="esporte">
+			</article>
+			<article class="esporte esporte-tenis">
 				<img src="img/tenis.jpg" alt="Imagem de uma raquete, bolas e rede de Tênis" class="esporte-imagem">
 				<h3 class="esporte-titulo">TÊNIS</h3>
 				<p class="esporte-descricao">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet blanditiis ipsa excepturi voluptatibus earum impedit optio saepe cum est, ea eos quibusdam mollitia ab tempora qui dolorem eaque quam id!</p>
-			</div>
+			</article>
 		</section>
 		<section class="secao-categorias">
 			<h2>CATEGORIAS EXTRAS</h2>
