--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
 			<a href="#" class="cabecalho__navegacao-link">FAQ</a>
 		</nav>
 	</header>
+	<a id="topo"></a>
 	<main class="conteudo-principal">
-		<a name="topo"></a>
 		<section class="conteudo-principal__titulo">
+			<a name="topo"></a>
 			<h1>Bem vindo a OneBitSports!</h1>
 			<p>Aqui é onde você encontra todos os itens mais novos e modernos do seu esporte preferido.</p>
 		</section>
@@ -104,7 +105,7 @@
 		<div class="rodape__logo">
 			<img src="img/logo-onebitcode.svg" alt="Logo da OneBitCode">
 		</div>
-		<a href="#topo" class="rodape__link-topo">Voltar para o topo</a>
+		<a href="#topo" class="rodape__link-topo">↻ Voltar para o topo</a>
 	</footer>
 </body>
 
